# define

./: .gitignore  README.md  main.py  pyproject.toml
define/: __init__.py
