[project]
name = "define"
version = "0.3.0"
description = "dictionary look up"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[project.scripts]
define = "define:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
